Fix #132, CSS Fix für mod_visitors_fe_invisible

--- a/src/Resources/public/css_demo/mod_visitors_fe.css
+++ b/src/Resources/public/css_demo/mod_visitors_fe.css
@@ -128,3 +128,8 @@
     font-weight:bold;
     font-size:0.8em;
 }
+
+.mod_visitors_fe_invisible {
+	border: 0;
+	margin: 0;
+}
