--- a/src/Resources/public/css_demo/mod_visitors_fe_horizontal.css
+++ b/src/Resources/public/css_demo/mod_visitors_fe_horizontal.css
@@ -165,3 +165,8 @@
     font-weight:bold;
     font-size:0.8em;
 }
+
+.mod_visitors_fe_invisible {
+	border: 0;
+	margin: 0;
+}
